syntax = "proto3";

option java_multiple_files = true;
option java_package = "globesort";
option java_outer_classname = "GlobeSortProto";

service GlobeSort {
  rpc Ping (Empty) returns (Empty) {}
  rpc SortIntegers (IntArray) returns (IntArray) {}
}

message Empty { }

message IntArray {
  repeated int32 values = 1;
}
